--- a/R/bird_joins.qmd
+++ b/R/bird_joins.qmd
@@ -6,7 +6,8 @@ format: html
 ```{r}
 library(tidyverse)
 library(here)
-
+library(stringr)
+library(dplyr)
 ```
 ## Read in data csv
 ```{r}
@@ -18,7 +19,30 @@ taxalist <- read_csv(here("data","52_pp52_taxalist_1.csv"))
 
 # Create a subset of bird_observations called birds_subset that only contains observations for birds with species id “BHCO” and “RWBL”, and from sites with site ID “LI-W” and “NU-C”
 ```{r}
-bird_subset <- bird_observations
+bird_subset <- bird_observations %>% 
+  filter(species_id %in% c("BHCO", "RWBL")) %>% 
+  filter(site_id %in% c("LI-W", "NU-C"))
   
 ```
+
+## Left join practice
+Use left join(s) to update birds_subset so that it also *includes sites and taxalist* information. *For each join*, include an *explicit argument saying which variable you are joining by (even if it will just assume the correct one for you)*. Store the updated data frame as birds_left. Make sure to look at the output - is what it contains consistent with what you expected it to contain?
+```{r}
+birds_left <- bird_subset %>% # using bird_subset data
+  left_join(sites, "site_id") %>% # left joining sites data, by matching "site_id" containing the same column in bird_subset
+  left_join(taxalist, "species_id") #left joining sites data, by matching "species_id" containing the same column in bird_subset
+```
+
+#Full join practice
+First, answer: what do you expect a full_join() between birds_subset and sites to contain?
+- I would expect for full join- to add all the data from 'sites' dataframe into bird_subset 
+# Write code to full_join the birds_subset and sites data into a new object called birds_full. Explicitly include the variable you’re joining by. Look at the output. Is it what you expected?
+```{r}
+birds_full <- full_join(bird_subset, sites)
+```
+
+## Task 2: Data wrangling and visualization with birds
+Starting with your birds object, rename the notes column to bird_obs_notes (so this doesn’t conflict with notes in the surveys dataset
+
+
 
